fixed small alignment issues; font for features section; added ParticleJS effect to main banner

--- a/scss/ignite-redesign.scss
+++ b/scss/ignite-redesign.scss
@@ -315,16 +315,32 @@ strong {
         inset 0px -15px 8px -10px theme-color('shadow-gray');
     background-color: lighten(theme-color('gray'), 5%);
 
+
     .container {
         padding-top: 3rem;
         padding-bottom: 3rem;
-
+        align-items: center;
+        display: flex ;
         // background: url('/images/svg/bg-flame-banner.svg') no-repeat right bottom;
-        // min-height: 400px;;
+        min-height: 400px;;
     }
 
+    #particle-js {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 0;
+        height: 515px;
+      }
+      
+
     .txt-wrapper {
+        background-color: rgba(246, 246, 246, 0.5);
         width: 100%;
+        position: relative;
+        
     }
 
     h1 {
@@ -451,9 +467,6 @@ strong {
             transition: filter 300ms ease-in-out;
             filter: grayscale(100%);
 
-            &:hover {
-                filter: none;
-            }
         }
     }
 
@@ -461,6 +474,12 @@ strong {
         text-align: center;
         margin-top: 1rem;;
         font-size: 16px;;
+    }
+
+    :hover {
+        .poweredby-logos img {
+            filter: none;
+        }
     }
 }
 
@@ -733,7 +752,7 @@ section.section-block {
             }
 
             span {
-                font-size: 17px;
+                font-size: 16.5px;
                 line-height: 1.5em;
                 font-weight: 600;
             }
@@ -758,7 +777,7 @@ section.section-block {
 
         .tab-pane {
             h3 {
-                font-size: 20px;
+                font-size: 22px;
                 text-align: center;
                 font-weight: 600;
             }
@@ -770,10 +789,11 @@ section.section-block {
 
             pre {
                 margin:  0 0 1em 0;
-                // max-height: 235px;
+                max-height: 285px;
             }
             code {
-                font-size: 14px;
+                font-size: 16px;
+                
             }
 
             .nav-tabs {
